ArxCyParser.cpp

// Generated from ArxCy.g4 by ANTLR 4.13.2


#include "ArxCyListener.h"
#include "ArxCyVisitor.h"

#include "ArxCyParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ArxCyParserStaticData final {
  ArxCyParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ArxCyParserStaticData(const ArxCyParserStaticData&) = delete;
  ArxCyParserStaticData(ArxCyParserStaticData&&) = delete;
  ArxCyParserStaticData& operator=(const ArxCyParserStaticData&) = delete;
  ArxCyParserStaticData& operator=(ArxCyParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag arxcyParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ArxCyParserStaticData> arxcyParserStaticData = nullptr;

void arxcyParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (arxcyParserStaticData != nullptr) {
    return;
  }
#else
  assert(arxcyParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ArxCyParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "array_literal", "function_decl", "parameters", 
      "parameter", "statement", "block", "if_statement", "for_statement", 
      "while_statement", "do_while_statement", "return_statement", "expression_statement", 
      "expression", "assignment", "logical_or", "logical_and", "equality", 
      "comparison", "term", "factor", "unary", "postfix", "primary", "arguments", 
      "type"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'{'", "','", "'}'", "'func'", "'if'", "'then'", 
      "'else-if'", "'else'", "'for'", "'while'", "'do'", "'return'", "'||'", 
      "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'!'", "'++'", "'--'", "'length'", "'int'", "'str'", 
      "'flt'", "'bool'", "'char'", "", "", "", "", "", "", "'('", "')'", 
      "'['", "']'", "'.'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "FLOAT_LITERAL", 
      "INT_LITERAL", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
      "DOT", "WS", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  arxcyParserStaticData = std::move(staticData);
}

}

ArxCyParser::ArxCyParser(TokenStream *input) : ArxCyParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ArxCyParser::ArxCyParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ArxCyParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *arxcyParserStaticData->atn, arxcyParserStaticData->decisionToDFA, arxcyParserStaticData->sharedContextCache, options);
}

ArxCyParser::~ArxCyParser() {
  delete _interpreter;
}

const atn::ATN& ArxCyParser::getATN() const {
  return *arxcyParserStaticData->atn;
}

std::string ArxCyParser::getGrammarFileName() const {
  return "ArxCy.g4";
}

const std::vector<std::string>& ArxCyParser::getRuleNames() const {
  return arxcyParserStaticData->ruleNames;
}

const dfa::Vocabulary& ArxCyParser::getVocabulary() const {
  return arxcyParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ArxCyParser::getSerializedATN() const {
  return arxcyParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ArxCyParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ArxCyParser::ProgramContext::EOF() {
  return getToken(ArxCyParser::EOF, 0);
}

std::vector<ArxCyParser::DeclarationContext *> ArxCyParser::ProgramContext::declaration() {
  return getRuleContexts<ArxCyParser::DeclarationContext>();
}

ArxCyParser::DeclarationContext* ArxCyParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<ArxCyParser::DeclarationContext>(i);
}

std::vector<ArxCyParser::Function_declContext *> ArxCyParser::ProgramContext::function_decl() {
  return getRuleContexts<ArxCyParser::Function_declContext>();
}

ArxCyParser::Function_declContext* ArxCyParser::ProgramContext::function_decl(size_t i) {
  return getRuleContext<ArxCyParser::Function_declContext>(i);
}

std::vector<ArxCyParser::StatementContext *> ArxCyParser::ProgramContext::statement() {
  return getRuleContexts<ArxCyParser::StatementContext>();
}

ArxCyParser::StatementContext* ArxCyParser::ProgramContext::statement(size_t i) {
  return getRuleContext<ArxCyParser::StatementContext>(i);
}


size_t ArxCyParser::ProgramContext::getRuleIndex() const {
  return ArxCyParser::RuleProgram;
}

void ArxCyParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ArxCyParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any ArxCyParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::ProgramContext* ArxCyParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ArxCyParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17589795322056) != 0)) {
      setState(57);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ArxCyParser::T__31:
        case ArxCyParser::T__32:
        case ArxCyParser::T__33:
        case ArxCyParser::T__34:
        case ArxCyParser::T__35: {
          setState(54);
          declaration();
          break;
        }

        case ArxCyParser::T__5: {
          setState(55);
          function_decl();
          break;
        }

        case ArxCyParser::T__2:
        case ArxCyParser::T__6:
        case ArxCyParser::T__10:
        case ArxCyParser::T__11:
        case ArxCyParser::T__12:
        case ArxCyParser::T__13:
        case ArxCyParser::T__22:
        case ArxCyParser::T__23:
        case ArxCyParser::T__27:
        case ArxCyParser::T__28:
        case ArxCyParser::T__29:
        case ArxCyParser::BOOL_LITERAL:
        case ArxCyParser::CHAR_LITERAL:
        case ArxCyParser::STRING_LITERAL:
        case ArxCyParser::FLOAT_LITERAL:
        case ArxCyParser::INT_LITERAL:
        case ArxCyParser::IDENTIFIER:
        case ArxCyParser::LPAREN: {
          setState(56);
          statement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(62);
    match(ArxCyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

ArxCyParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ArxCyParser::TypeContext* ArxCyParser::DeclarationContext::type() {
  return getRuleContext<ArxCyParser::TypeContext>(0);
}

tree::TerminalNode* ArxCyParser::DeclarationContext::IDENTIFIER() {
  return getToken(ArxCyParser::IDENTIFIER, 0);
}

ArxCyParser::ExpressionContext* ArxCyParser::DeclarationContext::expression() {
  return getRuleContext<ArxCyParser::ExpressionContext>(0);
}

ArxCyParser::Array_literalContext* ArxCyParser::DeclarationContext::array_literal() {
  return getRuleContext<ArxCyParser::Array_literalContext>(0);
}

tree::TerminalNode* ArxCyParser::DeclarationContext::LBRACK() {
  return getToken(ArxCyParser::LBRACK, 0);
}

tree::TerminalNode* ArxCyParser::DeclarationContext::RBRACK() {
  return getToken(ArxCyParser::RBRACK, 0);
}


size_t ArxCyParser::DeclarationContext::getRuleIndex() const {
  return ArxCyParser::RuleDeclaration;
}

void ArxCyParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void ArxCyParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any ArxCyParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::DeclarationContext* ArxCyParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, ArxCyParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      type();
      setState(65);
      match(ArxCyParser::IDENTIFIER);
      setState(66);
      match(ArxCyParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      type();
      setState(69);
      match(ArxCyParser::IDENTIFIER);
      setState(70);
      match(ArxCyParser::T__1);
      setState(71);
      expression();
      setState(72);
      match(ArxCyParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(74);
      type();
      setState(75);
      antlrcpp::downCast<DeclarationContext *>(_localctx)->lb = match(ArxCyParser::LBRACK);
      setState(76);
      antlrcpp::downCast<DeclarationContext *>(_localctx)->rb = match(ArxCyParser::RBRACK);
      setState(77);
      match(ArxCyParser::IDENTIFIER);
      setState(78);
      match(ArxCyParser::T__1);
      setState(79);
      array_literal();
      setState(80);
      match(ArxCyParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_literalContext ------------------------------------------------------------------

ArxCyParser::Array_literalContext::Array_literalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ArxCyParser::ExpressionContext *> ArxCyParser::Array_literalContext::expression() {
  return getRuleContexts<ArxCyParser::ExpressionContext>();
}

ArxCyParser::ExpressionContext* ArxCyParser::Array_literalContext::expression(size_t i) {
  return getRuleContext<ArxCyParser::ExpressionContext>(i);
}


size_t ArxCyParser::Array_literalContext::getRuleIndex() const {
  return ArxCyParser::RuleArray_literal;
}

void ArxCyParser::Array_literalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_literal(this);
}

void ArxCyParser::Array_literalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_literal(this);
}


std::any ArxCyParser::Array_literalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitArray_literal(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::Array_literalContext* ArxCyParser::array_literal() {
  Array_literalContext *_localctx = _tracker.createInstance<Array_literalContext>(_ctx, getState());
  enterRule(_localctx, 4, ArxCyParser::RuleArray_literal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(ArxCyParser::T__2);
    setState(93);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17456651304968) != 0)) {
      setState(85);
      expression();
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ArxCyParser::T__3) {
        setState(86);
        match(ArxCyParser::T__3);
        setState(87);
        expression();
        setState(92);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(95);
    match(ArxCyParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_declContext ------------------------------------------------------------------

ArxCyParser::Function_declContext::Function_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ArxCyParser::TypeContext* ArxCyParser::Function_declContext::type() {
  return getRuleContext<ArxCyParser::TypeContext>(0);
}

tree::TerminalNode* ArxCyParser::Function_declContext::IDENTIFIER() {
  return getToken(ArxCyParser::IDENTIFIER, 0);
}

tree::TerminalNode* ArxCyParser::Function_declContext::LPAREN() {
  return getToken(ArxCyParser::LPAREN, 0);
}

tree::TerminalNode* ArxCyParser::Function_declContext::RPAREN() {
  return getToken(ArxCyParser::RPAREN, 0);
}

ArxCyParser::BlockContext* ArxCyParser::Function_declContext::block() {
  return getRuleContext<ArxCyParser::BlockContext>(0);
}

ArxCyParser::ParametersContext* ArxCyParser::Function_declContext::parameters() {
  return getRuleContext<ArxCyParser::ParametersContext>(0);
}


size_t ArxCyParser::Function_declContext::getRuleIndex() const {
  return ArxCyParser::RuleFunction_decl;
}

void ArxCyParser::Function_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_decl(this);
}

void ArxCyParser::Function_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_decl(this);
}


std::any ArxCyParser::Function_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitFunction_decl(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::Function_declContext* ArxCyParser::function_decl() {
  Function_declContext *_localctx = _tracker.createInstance<Function_declContext>(_ctx, getState());
  enterRule(_localctx, 6, ArxCyParser::RuleFunction_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(ArxCyParser::T__5);
    setState(98);
    type();
    setState(99);
    match(ArxCyParser::IDENTIFIER);
    setState(100);
    match(ArxCyParser::LPAREN);
    setState(102);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 133143986176) != 0)) {
      setState(101);
      parameters();
    }
    setState(104);
    match(ArxCyParser::RPAREN);
    setState(105);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

ArxCyParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ArxCyParser::ParameterContext *> ArxCyParser::ParametersContext::parameter() {
  return getRuleContexts<ArxCyParser::ParameterContext>();
}

ArxCyParser::ParameterContext* ArxCyParser::ParametersContext::parameter(size_t i) {
  return getRuleContext<ArxCyParser::ParameterContext>(i);
}


size_t ArxCyParser::ParametersContext::getRuleIndex() const {
  return ArxCyParser::RuleParameters;
}

void ArxCyParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void ArxCyParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}


std::any ArxCyParser::ParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitParameters(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::ParametersContext* ArxCyParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 8, ArxCyParser::RuleParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    parameter();
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ArxCyParser::T__3) {
      setState(108);
      match(ArxCyParser::T__3);
      setState(109);
      parameter();
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

ArxCyParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ArxCyParser::TypeContext* ArxCyParser::ParameterContext::type() {
  return getRuleContext<ArxCyParser::TypeContext>(0);
}

tree::TerminalNode* ArxCyParser::ParameterContext::IDENTIFIER() {
  return getToken(ArxCyParser::IDENTIFIER, 0);
}


size_t ArxCyParser::ParameterContext::getRuleIndex() const {
  return ArxCyParser::RuleParameter;
}

void ArxCyParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void ArxCyParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


std::any ArxCyParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::ParameterContext* ArxCyParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 10, ArxCyParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    type();
    setState(116);
    match(ArxCyParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ArxCyParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ArxCyParser::BlockContext* ArxCyParser::StatementContext::block() {
  return getRuleContext<ArxCyParser::BlockContext>(0);
}

ArxCyParser::If_statementContext* ArxCyParser::StatementContext::if_statement() {
  return getRuleContext<ArxCyParser::If_statementContext>(0);
}

ArxCyParser::For_statementContext* ArxCyParser::StatementContext::for_statement() {
  return getRuleContext<ArxCyParser::For_statementContext>(0);
}

ArxCyParser::While_statementContext* ArxCyParser::StatementContext::while_statement() {
  return getRuleContext<ArxCyParser::While_statementContext>(0);
}

ArxCyParser::Do_while_statementContext* ArxCyParser::StatementContext::do_while_statement() {
  return getRuleContext<ArxCyParser::Do_while_statementContext>(0);
}

ArxCyParser::Expression_statementContext* ArxCyParser::StatementContext::expression_statement() {
  return getRuleContext<ArxCyParser::Expression_statementContext>(0);
}

ArxCyParser::Return_statementContext* ArxCyParser::StatementContext::return_statement() {
  return getRuleContext<ArxCyParser::Return_statementContext>(0);
}


size_t ArxCyParser::StatementContext::getRuleIndex() const {
  return ArxCyParser::RuleStatement;
}

void ArxCyParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void ArxCyParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any ArxCyParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::StatementContext* ArxCyParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, ArxCyParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(118);
      block();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(119);
      if_statement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(120);
      for_statement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(121);
      while_statement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(122);
      do_while_statement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(123);
      expression_statement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(124);
      return_statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ArxCyParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ArxCyParser::StatementContext *> ArxCyParser::BlockContext::statement() {
  return getRuleContexts<ArxCyParser::StatementContext>();
}

ArxCyParser::StatementContext* ArxCyParser::BlockContext::statement(size_t i) {
  return getRuleContext<ArxCyParser::StatementContext>(i);
}


size_t ArxCyParser::BlockContext::getRuleIndex() const {
  return ArxCyParser::RuleBlock;
}

void ArxCyParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void ArxCyParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any ArxCyParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ArxCyVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ArxCyParser::BlockContext* ArxCyParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 14, ArxCyParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(ArxCyParser::T__2);
    setState(131);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17456651335816) != 0)) {
      setState(128);
      statement();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(134);
    match(ArxCyParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

ArxCyParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ArxCyParser::If_statementContext::LPAREN() {
  return getTokens(ArxCyParser::LPAREN);
}

tree::TerminalNode* ArxCyParser::If_statementContext::LPAREN(size_t i) {
  return getToken(ArxCyParser::LPAREN, i);
}

std::vector<ArxCyParser::ExpressionContext *> ArxCyParser::If_statementContext::expression() {
  return getRuleContexts<ArxCyParser::ExpressionContext>();
}

ArxCyParser::ExpressionContext* ArxCyParser::If_statementContext::expression(size_t i) {
  return getRuleContext<ArxCyParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> ArxCyParser::If_statementContext::RPAREN() {
  return getTokens(ArxCyParser::RPAREN);
}

tree::TerminalNode* ArxCyParser::If_statementContext::RPAREN(size_t i) {
  return getToken(ArxCyParser::RPAREN, i);
}

std::vector<ArxCyParser::BlockContext *> ArxCyParser::If_statementContext::block() {
  return getRuleContexts<ArxCyParser::BlockContext>();
}

ArxCyParser::BlockContext* ArxCyParser::If_statementContext::block(size_t i) {
  return getRuleContext<ArxCyParser::BlockContext>(i);
}


size_t ArxCyParser::If_statementContext::getRuleIndex() const {
  return ArxCyParser::RuleIf_statement;
}

void ArxCyParser::If_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ArxCyListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement(this);
}
